# CGVM_FDoG_opencv

./: .gitignore  CMakeLists.txt  README.md  main.cc  main2.cc  main3.cc
include/: FlowPath.h  Label.h  common_func.h  conv_clr.h  image_processing.h  image_processing_accelerater.h  image_processing_cuda.h  interactive_gui.h  main.h  mtoolkits.h  utils.h  vectors_.h
scripts/: create_simple_data.ipynb  npy_prac.ipynb  npy_to_npz.py  run_FDoG.sh  run_FDoG_manually.sh  visualize_fpath.ipynb  visualize_fpath_interactive.py
src/: CMakeLists.txt  common_func.cc  conv_clr.cc  image_processing.cc  image_processing_cuda.cc  interactive_gui.cc  mtoolkits.cc  utils.cc
